tests/miniJava/neg/000163_mutation.MiniJava
class java { public static java void Main ( String [ ] java ) { { } } }
